remove height padding and border from banners

--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -20,11 +20,11 @@ border-style: none !important;
   background-position: left center;
   background-repeat: no-repeat;
   background-color: #51247a;
-  border: 8px inset transparent;
+/*  border: 8px inset transparent;
   padding-left: 60px;
   padding-top: 10px;
   padding-bottom: 8px;
-  height: 30px;
+  height: 30px;*/
   vertical-align: middle;  
 }
 .purple-banner-jigsaw{
@@ -92,11 +92,11 @@ border-style: none !important;
   background-position: left center;
   background-repeat: no-repeat;
   background-color: #f8f8ff;;
-  border: 8px inset transparent;
+  /*border: 8px inset transparent;
   padding-left: 60px;
   padding-top: 10px;
   padding-bottom: 8px;
-  height: 30px;
+  height: 30px;*/
   vertical-align: middle;  
 }
 .grey-banner span{
