update icon classes black and white

--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -43,117 +43,117 @@ border-style: none !important;
 .blue-banner span{
   color: #fff;
 }
-.purple-banner-jigsaw{
+.icon-jigsaw-white{
   background-image: url('/uqlearnx/img/activities-white.png');
 }
-.purple-banner-checklist-quiz{
+.icon-checklist-quiz-white{
   background-image: url('/uqlearnx/img/quiz-white.png');
 }
-.purple-banner-magnifying-glass{
+.icon-magnifying-glass-white{
   background-image: url('/uqlearnx/img/explore-white.png');
 }
-.purple-banner-book{
+.icon-book-white{
   background-image: url('/uqlearnx/img/book-white.png');
 }   
-.purple-banner-discuss{
+.icon-discuss-white{
   background-image: url('/uqlearnx/img/discuss-white.png');
 } 
-.purple-banner-timer{
+.icon-timer-white{
   background-image: url('/uqlearnx/img/timer-white.png');
 } 
-.purple-banner-video{
+.icon-video-white{
   background-image: url('/uqlearnx/img/video-white.png');
 }
-.purple-banner-thought{
+.icon-thought-white{
   background-image: url('/uqlearnx/img/think-white.png')
 }
-.purple-banner-pencil{
+.icon-pencil-white{
   background-image: url('/uqlearnx/img/notes-white.png')
 }
-.purple-banner-link{
+.icon-link-white{
   background-image: url('/uqlearnx/img/link-white.png')
 }
-.purple-banner-group{
+.icon-group-white{
   background-image: url('/uqlearnx/img/group-white.png')
 }
-.purple-banner-podcast{
+.icon-podcast-white{
   background-image: url('/uqlearnx/img/podcast-white.png')
 }
-.purple-banner-arrow-circle{
+.icon-arrow-circle-white{
   background-image: url('/uqlearnx/img/future-white.png')
 }
-.purple-banner-cogs{
+.icon-cogs-white{
   background-image: url('/uqlearnx/img/cogs-white.png')
 }
-.purple-banner-lightbulb{
+.icon-lightbulb-white{
   background-image: url('/uqlearnx/img/example-white.png')
 }
-.purple-banner-list{
+.icon-list-white{
   background-image: url('/uqlearnx/img/summary-white.png')
 }
-.purple-banner-alert-circle{
+.icon-alert-circle-white{
   background-image: url('/uqlearnx/img/alert-white.png')
 }
-.purple-banner-alert-triangle{
+.icon-alert-triangle-white{
   background-image: url('/uqlearnx/img/important-white.png')
 }
-.purple-banner-globe{
+.icon-globe-white{
   background-image: url('/uqlearnx/img/world-white.png')
 }
-.grey-banner-jigsaw{
+.icon-jigsaw-black{
   background-image: url('/uqlearnx/img/activities-black.png');
 }
-.grey-banner-checklist-quiz{
+.icon-checklist-quiz-black{
   background-image: url('/uqlearnx/img/quiz-black.png');
 }
-.grey-banner-magnifying-glass{
+.icon-magnifying-glass-black{
   background-image: url('/uqlearnx/img/explore-black.png');
 }
-.grey-banner-book{
+.icon-book-black{
   background-image: url('/uqlearnx/img/book-black.png');
 }   
-.grey-banner-discuss{
+.icon-discuss-black{
   background-image: url('/uqlearnx/img/discuss-black.png');
 } 
-.grey-banner-timer{
+.icon-timer-black{
   background-image: url('/uqlearnx/img/timer-black.png');
 } 
-.grey-banner-video{
+.icon-video-black{
   background-image: url('/uqlearnx/img/video-black.png');
 }
-.grey-banner-thought{
+.icon-thought-black{
   background-image: url('/uqlearnx/img/think-black.png')
 }
-.grey-banner-pencil{
+.icon-pencil-black{
   background-image: url('/uqlearnx/img/notes-black.png')
 }
-.grey-banner-link{
+.icon-link-black{
   background-image: url('/uqlearnx/img/link-black.png')
 }
-.grey-banner-group{
+.icon-group-black{
   background-image: url('/uqlearnx/img/group-black.png')
 }
-.grey-banner-podcast{
+.icon-podcast-black{
   background-image: url('/uqlearnx/img/podcast-black.png')
 }
-.grey-banner-arrow-circle{
+.icon-arrow-circle-black{
   background-image: url('/uqlearnx/img/future-black.png')
 }
-.grey-banner-cogs{
+.icon-cogs-black{
   background-image: url('/uqlearnx/img/cogs-black.png')
 }
-.grey-banner-lightbulb{
+.icon-lightbulb-black{
   background-image: url('/uqlearnx/img/example-black.png')
 }
-.grey-banner-list{
+.icon-list-black{
   background-image: url('/uqlearnx/img/summary-black.png')
 }
-.grey-banner-alert-circle{
+.icon-alert-circle-black{
   background-image: url('/uqlearnx/img/alert-black.png')
 }
-.grey-banner-alert-triangle{
+.icon-alert-triangle-black{
   background-image: url('/uqlearnx/img/important-black.png')
 }
-.grey-banner-globe{
+.icon-globe-black{
   background-image: url('/uqlearnx/img/world-black.png')
 }
