--- a/css/custom-styles-build-guide.css
+++ b/css/custom-styles-build-guide.css
@@ -17,7 +17,7 @@
   
   .coll-content {
     padding: 0 18px;
-    max-height: 0;
+    max-height: 0px;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color: #f1f1f1;
