--- a/css/custom-styles-build-guide.css
+++ b/css/custom-styles-build-guide.css
@@ -1,6 +1,6 @@
 /*CSS for collapsible items*/
 .coll-btn {
-    background-color: #777;
+    background: #51247A !important;
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -12,7 +12,7 @@
   }
   
   .coll-active, .coll-btn:hover {
-    background-color: #555;
+    background: #962A8B !important;
   }
   
   .coll-content {
