--- a/css/custom-styles-build-guide.css
+++ b/css/custom-styles-build-guide.css
@@ -6,9 +6,9 @@
     padding: 18px;
     width: 100%;
     border: none;
-    text-align: left;
+    text-align: center;
     outline: none;
-    font-size: 15px;
+    font-size: 1.2rem;
   }
   
   .coll-active, .coll-btn:hover {
