max width important to forth width on tooltips

--- a/phrm2300/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/phrm2300/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -5641,7 +5641,7 @@ textarea.form-control-lg {
 }
 .tooltip {
   --bs-tooltip-zindex: 1080;
-  --bs-tooltip-max-width: 300px;
+  --bs-tooltip-max-width: 300px !important;
   --bs-tooltip-padding-x: 0.75rem;
   --bs-tooltip-padding-y: 0.5rem;
   --bs-tooltip-margin: ;
