--- a/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -4460,7 +4460,7 @@ textarea.form-control-lg {
   font-size: 1rem;
   color: var(--bs-white) !important;
   text-align: left;
-  background-color: var(--bs-uqpurple) !important;
+  background: var(--bs-uqpurple) !important;
   border: 0;
   border-radius: 0;
   overflow-anchor: none;
@@ -4473,7 +4473,7 @@ textarea.form-control-lg {
 }
 .accordion-button:not(.collapsed) {
   color: var(--bs-white) !important;
-  background-color: var(--bs-uqpurplehover) !important;
+  background: var(--bs-uqpurplehover) !important;
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 .accordion-button:not(.collapsed)::after {
