--- a/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -643,8 +643,8 @@ progress {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
   width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  padding-right: 0px;
+  padding-left: 0px;
   margin-right: auto;
   margin-left: auto;
 }
